--- a/src/components/Layout/sidebar/Sidebar.css
+++ b/src/components/Layout/sidebar/Sidebar.css
@@ -358,6 +358,9 @@ a:hover {
   font-size: 16px;
   padding: 10px;
   margin-bottom: 5px;
+  max-height: 150px;
+  overflow-y: auto;
+  word-wrap: break-word;
 }
 
 .popup-actions {
